SFUSA/force-app/main/default/objects/Legal_Response__c/fields/Application_Question__c.field-meta.xml
<CustomField>
        <fullName>Application_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Question</label>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipLabel>Legal Responses</relationshipLabel>
        <relationshipName>Legal_Responses</relationshipName>
        <type>Lookup</type>
    </CustomField>