SFUSA/force-app/main/default/objects/Legal_Response__c/fields/Question_Text__c.field-meta.xml
<CustomField>
        <fullName>Question_Text__c</fullName>
        <formula>Application_Question__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </CustomField>